@@ -251,7 +251,10 @@ int st_echo_drain(eff_t effp, st_sample_t *obuf, st_size_t *osamp)
         };
         /* samples played, it remains */
         *osamp = done;
-        return (ST_SUCCESS);
+        if (echo->fade_out == 0)
+            return ST_EOF;
+        else
+            return ST_SUCCESS;
 }
 
 /*
