@@ -255,7 +255,10 @@ int st_echos_drain(eff_t effp, st_sample_t *obuf, st_size_t *osamp)
         };
         /* samples played, it remains */
         *osamp = done;
-        return (ST_SUCCESS);
+        if (echos->sumsamples == 0)
+            return ST_EOF;
+        else
+            return ST_SUCCESS;
 }
 
 /*
